<resources>
    <string name="app_name">MovieMixer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    //HomeFragment
    <string name="headerHome">MovieMixer</string>
    <string name="hntSearch">Enter movie title</string>
    <string name="btnChuck">Get a Chuckle</string>
    <string name="logo_ass3">Moviemixlogo</string>
    //RottenFragment
    <string name="headerRotten">Rotten</string>
    <string name="btnRefresh">Refresh</string>
    //ImdbFragment
    <string name="headerImdb">IMDB</string>
    <string name="btnRefresh2">Refresh</string>
    //OMDB
    <string name="apiKey">1a8005f4</string>
    <string name="btnSearch">Search</string>
</resources>