<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.Fragment_Imdb"
    android:background="@drawable/backgroundapp2">
    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/twHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/border"
        android:padding="10sp"
        android:text="@string/headerImdb"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="132dp"
        android:layout_height="91dp"
        android:contentDescription="TODO"
        android:src="@drawable/movieicon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/twHeader" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rwImdb"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/border"
        android:padding="5dp"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="123dp"
        android:layout_height="84dp"
        android:background="@drawable/custom_button"
        android:rotationX="30"
        android:text="@string/btnSearch"
        app:backgroundTint="#9EFF023D"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:ems="10"
        android:hint="@string/hntSearch"
        android:inputType="textPersonName"
        android:padding="20dp"
        android:textSize="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rwImdb" />


</androidx.constraintlayout.widget.ConstraintLayout>